Edited HTML and CSS

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
       <!-- Helmet section -->
       <section class="section" id="helmet-choices">
-        <h3 class="heading-sections">Helmet popular brands</h3>
+        <h3 class="heading-sections">Popular helmet brands</h3>
         <div class="helmets">
           <div class="helmet-brands">
             <a href="https://www.shoei.com/worldwide/" target="_blank">Shoei</a>
