--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
     <!-- Copyright -->
     <div id="copyright">
-      <p>&copy; Copyright by 🌻 Christina Tran 🌻</p>
+      <p>&copy; Copyright by 🌻 Christie Tran 🌻</p>
     </div>
   </body>
 </html>
