--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Riding motorcycle | Christina Tran</title>
+        <title>Riding motorcycle | Thuy Tran</title>
         <link rel="stylesheet" href="src/style.css" />
         <script src="src/script.js" defer></script>
     </head>
@@ -37,15 +37,15 @@
                 <h3 class="heading-sections">about me</h3>
                 <div class="about-me-info">
                     <p>
-                        👋👋👋 My name is <strong>Christie Tran</strong> 🌻. I
-                        am <em>a Front End Web Developer based in Toronto</em>.
+                        👋👋👋 My name is <strong>Thuy Tran</strong> 🌻. I
+                        am <em>a Web Developer based in Toronto</em>.
                     </p>
                     <p>
                         🏍 2014 Kawasaki Ninja 300 SE is my first bike since I
                         started riding in Canada in 2019. His name is Turtle 🐢
                     </p>
                     <p>
-                        📌 Turtle is bought as an used motorcycle through an
+                        📌 Turtle is bought as a used motorcycle through an
                         online website.
                         <a href="#my-tips" class="tips-link">Go to My Tips</a>🎁
                     </p>
@@ -54,7 +54,7 @@
                         8,000km into my bike odometer.
                     </p>
                     <p>
-                        📌 Living in Toronto means riding my bike in a half of
+                        📌 Living in Toronto means riding my bike in half of
                         year. The rest is parking him in my parking lot due to
                         <strong>a long...gg...g winter</strong> ⛄
                     </p>
@@ -92,7 +92,7 @@
                         </li>
                         <li class="list-rules">
                             Wear an approved helmet (an exemption to Ontario’s
-                            mandatory helmet law applies for Sikh operators and
+                            mandatory helmet law applies to Sikh operators and
                             passengers who meet the requirements outlined in
                             Regulation 610 (6)) 👉<a
                                 href="#helmet-choices"
@@ -142,7 +142,7 @@
                             began production of industry as an independent
                             entity a year before that, in 1958. They were the
                             first to use Carbon fiber and later Kevlar to make
-                            helmets are known for their light weight helmets.
+                            helmets are known for their lightweight helmets.
                             They were also the ones to introduce Dual Liner
                             Ventilation.
                         </p>
@@ -159,12 +159,12 @@
                         <p class="helmet-info">
                             ​Founded in 1971, HJC is an exclusive motorcycle
                             helmet producer. If you are looking for a reasonable
-                            price range for a motorcycle helmet, HJC really is
+                            price range for a motorcycle helmet, HJC is
                             the company for you. They have superior aerodynamics
-                            due to their very own state of the art wind tunnel
+                            due to their very own state-of-the-art wind tunnel
                             lab. Their factories are spread across Asia, with
-                            one each in China, Korea and Vietnam. HJC are
-                            pioneers center locking mechanism, comfort and
+                            one each in China, Korea, and Vietnam. HJC are
+                            pioneers in center locking mechanism, comfort, and
                             aerodynamics.
                         </p>
                     </div>
@@ -180,7 +180,7 @@
                         <p class="helmet-info">
                             An American manufacturer also makes it to our list.
                             It was founded in 1923 as Bell Auto Parts in Bell,
-                            California and made their Motorcycle helmet
+                            California made its Motorcycle helmet
                             department in 1954. They invest heavily in safety
                             campaigns like ‘Safe Kids USA’. Bell is a leading
                             company in making professional cycling helmets as
@@ -197,12 +197,12 @@
                             class="helmet-logos"
                         />
                         <p class="helmet-info">
-                            ​The Italian company founded in 1946 by Gino Amisano
-                            has its headquarters in Alessadnria, Peidmount,
-                            Italy. Agv is owned by Dainees and started by making
+                            ​The Italian company was founded in 1946 by Gino Amisano
+                            has its headquarters in Alessandria, Piedmont,
+                            Italy. Avg is owned by Dainees and started by making
                             leather seats and motorcycle saddles. They
                             specialize in Moto GP helmets and have Valentino
-                            Rossi as their honorary president, a 7 time world
+                            Rossi as their honorary president, a 7-time world
                             champion of Moto GP.
                         </p>
                     </div>
@@ -251,8 +251,8 @@
                 <h3 class="heading-sections">🌻 MY TIPS 🌻</h3>
                 <ul>
                     <li class="list-tips">
-                        There are some websites which you can look for an used
-                        mortorcycle
+                        There are some websites which you can look for a used
+                        motorcycle
                         <a href="https://www.kijiji.ca/" target="_blank"
                             >https://www.kijiji.ca/</a
                         >
@@ -264,13 +264,13 @@
                         >
                     </li>
                     <li class="list-tips">
-                        I would like to recommend you to take a riding course
+                        I would like to recommend you take a riding course
                         before you ride in Canada. After the course, you will
-                        get a certificate which helps you to get a cheaper
+                        get a certificate which will help you to get cheaper
                         insurance.
                     </li>
                     <li class="list-tips">
-                        Do-not risk your life to ride in winter. Black ice and
+                        Do not risk your life to ride in winter. Black ice and
                         snow are biker's enemies in Canada. Motorcycles are a
                         seasonal vehicle here.
                     </li>
@@ -364,8 +364,7 @@
         <!-- Copyright -->
         <div id="copyright">
             <p>
-                &copy; Copyright by 🌻<a href="https://christiesunnie.com/"
-                    >Christie Tran</a
+                &copy; Copyright by 🌻Thuy Tran
                 >🌻
             </p>
         </div>
